# SiPMCalib

./: .gitignore  .gitmodules  .uncrustify.cfg  CMakeLists.txt  CrossTalkPdf_8cc_source.html  CrossTalkPdf_8hpp_source.html  DarkTrigger_8cc_source.html  DisplayWaveform_8cc_source.html  FitDark_8cc_source.html  FitLowLight_8cc_source.html  FitNonLinear_8cc.html  FitNonLinear_8cc_source.html  FitProfile_8cc_source.html  InvSq__HScanPlot_8cc_source.html  InvSq__ReduceFilePower_8cc.html  InvSq__ReduceFilePower_8cc_source.html  InvSq__ZScanPlot_8cc.html  InvSq__ZScanPlot_8cc_source.html  MakeBiasCorrector_8cc_source.html  MakeRooData_8cc_source.html  MakeRooData_8hpp_source.html  NonLinearModel_8cc_source.html  NonLinearModel_8hpp_source.html  PlotProfile_8cc_source.html  PlotTimeScan_8cc_source.html  PlotVisZProf_8cc_source.html  PlotXYProf_8cc_source.html  PulserShape_8cc_source.html  README.md  SiPMDarkFunc_8cc_source.html  SiPMDarkFunc_8hpp_source.html  SiPMDarkPdf_8cc_source.html  SiPMDarkPdf_8hpp_source.html  SiPMLowLightFit_8cc_source.html  SiPMLowLightFit_8hpp_source.html  SiPMLowLightFit__Estimate_8cc_source.html  SiPMLowLightFit__Plot_8cc_source.html  SiPMNonLinearFit_8cc_source.html  SiPMNonLinearFit_8hpp_source.html  SiPMPdf_8cc_source.html  (+64 more)
SiPMCalc/: CMakeLists.txt  README.md  condor_runtoy.sh  gencondor_runtoy.py
SiPMCalc/docs/: main.md
SiPMCalc/interface/: CrossTalkPdf.hpp  NonLinearModel.hpp  SiPMDarkFunc.hpp  SiPMDarkPdf.hpp  SiPMFormat.hpp  SiPMLowLightFit.hpp  SiPMNonLinearFit.hpp  SiPMPdf.hpp  SiPMPdf_Functor.hpp  SiPMSumGaus.hpp  SiPMWaveFormat.hpp  (+2 more)
(+97 files in other folders)
